HTML: Slightly cleaner CSS styling of X dropdowns.

--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
           background-color: #606060;
           color: #FFFFFF;
         }
+        .x-dropdown {
+          display:inline-block;
+          margin-bottom: 0px;
+          margin-left: 0px;
+          margin-right: 0px;
+        }
         h5 a.stmt_toggle {
           cursor: pointer;
           color: #000000;
@@ -215,7 +221,7 @@
                 <div id="B_AXB" style="display:inline-block;">B</div>
             </a>
             <!-- Dropdown for X -->
-            <div class="form-group row" style="display:inline-block;">
+            <div class="form-group row x-dropdown">
                 <div class="col-sm-4">
                     <div class="dropdown" id="AXB_dropdown" style="width: 360px; top: 0px; left: 0px; visibility: visible;">
                         <select id="select_X_sr" class="form-control" placeholder="Select a gene X..."></select>
@@ -253,7 +259,7 @@
                 <div id="A_BXA" style="display:inline-block;">A</div>
             </a>
             <!-- Dropdown for X -->
-            <div class="form-group row" style="display:inline-block;">
+            <div class="form-group row x-dropdown">
                 <div class="col-sm-4">
                     <div class="dropdown" id="BXA_dropdown" style="width: 360px; top: 0px; left: 0px; visibility: visible;">
                         <select id="select_X_sr" class="form-control" placeholder="Select a gene X..."></select>
@@ -290,7 +296,7 @@
                 <div id="B_ABtoX" style="display:inline-block;">B</div>)
             </a>
             <!-- Dropdown for X -->
-            <div class="form-group row" style="display:inline-block;">
+            <div class="form-group row x-dropdown">
                 <div class="col-sm-4">
                     <div class="dropdown" id="ABtoX_dropdown" style="width: 360px; top: 0px; left: 0px; visibility: visible;">
                         <select id="select_X_sr" class="form-control" placeholder="Select a gene X..."></select>
@@ -327,7 +333,7 @@
                 <div id="B_XtoAB" style="display:inline-block;">B</div>)
             </a>
             <!-- Dropdown for X -->
-            <div class="form-group row" style="display:inline-block;">
+            <div class="form-group row x-dropdown">
                 <div class="col-sm-4">
                     <div class="dropdown" id="XtoAB_dropdown" style="width: 360px; top: 0px; left: 0px; visibility: visible;">
                         <select id="select_X_sr" class="form-control" placeholder="Select a gene X..."></select>
