Load JS over https instead of http

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <!-- SCRIPTS -->
     <script type="text/javascript" src="https://selectize.github.io/selectize.js/js/selectize.js"></script>
-    <script type="text/javascript" src="http://www.indra.bio/indra/assemblers/html/curationFunctions.js"></script>
+    <script type="text/javascript" src="https://www.indra.bio/indra/assemblers/html/curationFunctions.js"></script>
     <!-- <script type="text/javascript" src="https://s3.amazonaws.com/depmap-public/curationJS/curationFunctions.js"></script> -->
     <script type="text/javascript" src="scripts/populate_dropdown_from_remote_json.js"></script>
 
