WIP Add full-stack handling of more options

--- a/indra_depmap_service/query.html
+++ b/indra_depmap_service/query.html
@@ -23,7 +23,12 @@
       let queryDict = {
         source: document.getElementById('source').value,
         target: document.getElementById('target').value,
-        weight: document.getElementById('weighted-search').checked
+        path_length: document.getElementById('path-length').value,
+        spec_len_only: document.getElementById('selected-length-only').checked,
+        sign: document.getElementById('sign-dd').value,
+        weighted: document.getElementById('weighted-search').checked,
+        direct_only: document.getElementById('direct-only').checked,
+        curated_db_only: document.getElementById('curated-db-only').checked
       }
       let _url = SUBMIT_URL
       statusBox.textContent = 'Query submitted...'
@@ -71,6 +76,11 @@
       }
     }
 
+    // Function to put stmts from path in a HTML format with linkouts
+    // function generatePathLinkout(path) {
+    //   return [];  // NOT DONE HERE!!
+    // }
+
   </script>
 </head>
 <body>
@@ -90,7 +100,41 @@
       </div>
       <div class="custom-control custom-checkbox">
         <input type="checkbox" class="custom-control-input" id="weighted-search">
-        <label class="custom-control-label" for="weighted-search">Use weighted search</label>
+        <label class="custom-control-label" for="weighted-search">Weighted search</label>
+      </div>
+      <div class="custom-control custom-checkbox">
+        <input type="checkbox" class="custom-control-input" id="direct-only">
+        <label class="custom-control-label" for="direct-only">Direct only</label>
+      </div>
+      <div class="custom-control custom-checkbox">
+        <input type="checkbox" class="custom-control-input" id="curated-db-only">
+        <label class="custom-control-label" for="curated-db-only">Curated databases only</label>
+      </div>
+      <div class="row" style="padding-top: 5px;">
+        <div class="dropdown" style="padding-left: 15px; padding-right: 15px;">
+          <select id="path-length">
+            <option value="" selected="selected" disabled="disabled" hidden="hidden">Path length</option>
+            <option value=1>1</option>
+            <option selected="selected" value=2>2</option>
+            <option value=3>3</option>
+            <option value=4>4</option>
+            <option value=5>5</option>
+            <option value="no_limit">No Limit</option>
+          </select>
+        </div>
+        <div class="custom-control custom-checkbox">
+          <input type="checkbox" class="custom-control-input" id="selected-length-only">
+          <label class="custom-control-label" for="selected-length-only">Check for selected length only</label>
+        </div>
+      </div>
+      <div class="row" style="padding-top: 5px;">
+        <div class="dropdown" style="padding-left: 15px; padding-right: 15px;">
+          <label><select id="sign-dd">
+            <option selected="selected" value="no_sign">No sign</option>
+            <option value="plus">+</option>
+            <option value="minus">-</option>
+          </select>&nbsp;&nbsp;Sign</label>
+        </div>
       </div>
       <button style="margin-top: 16px; margin-bottom: 16px" type="button" class="btn btn-primary" onclick="submitQuery()">Submit query</button>
     </form>
