--- a/indra_depmap_service/query.html
+++ b/indra_depmap_service/query.html
@@ -103,16 +103,16 @@
         <label class="custom-control-label" for="weighted-search">Weighted search</label>
       </div>
       <div class="custom-control custom-checkbox">
-        <input type="checkbox" class="custom-control-input" id="direct-only">
+        <input type="checkbox" class="custom-control-input" id="direct-only" disabled>
         <label class="custom-control-label" for="direct-only">Direct only</label>
       </div>
       <div class="custom-control custom-checkbox">
-        <input type="checkbox" class="custom-control-input" id="curated-db-only">
+        <input type="checkbox" class="custom-control-input" id="curated-db-only" disabled>
         <label class="custom-control-label" for="curated-db-only">Curated databases only</label>
       </div>
       <div class="row" style="padding-top: 5px;">
         <div class="dropdown" style="padding-left: 15px; padding-right: 15px;">
-          <select id="path-length">
+          <select id="path-length" disabled>
             <option value="" selected="selected" disabled="disabled" hidden="hidden">Path length</option>
             <option value=1>1</option>
             <option selected="selected" value=2>2</option>
@@ -123,13 +123,13 @@
           </select>
         </div>
         <div class="custom-control custom-checkbox">
-          <input type="checkbox" class="custom-control-input" id="selected-length-only">
+          <input type="checkbox" class="custom-control-input" id="selected-length-only" disabled>
           <label class="custom-control-label" for="selected-length-only">Check for selected length only</label>
         </div>
       </div>
       <div class="row" style="padding-top: 5px;">
         <div class="dropdown" style="padding-left: 15px; padding-right: 15px;">
-          <label><select id="sign-dd">
+          <label><select id="sign-dd" disabled>
             <option selected="selected" value="no_sign">No sign</option>
             <option value="plus">+</option>
             <option value="minus">-</option>
@@ -140,7 +140,7 @@
     </form>
   </div>
   <div class="container">
-    <p><i id="query-status">status</i></p>
+    <p><i id="query-status">Some settings are currently unavailable</i></p>
   </div>
 
   <div class="container">
@@ -162,7 +162,7 @@
         </p>
         <p><a href="https://indralab.github.io">INDRALAB</a></p>
         <p><a href="http://hits.harvard.edu">Harvard Program in Therapeutic Science (HiTS)</a></p>
-        <p><b>Automated Scientific Discovery Framework</b>(ASDF)<br>The DARPA ASDF project develops algorithms and software for reasoning about complex mechanisms operating in the natural world, explaining large-scale data, assisting humans in generating actionable, model-based hypotheses and testing these hypotheses empirically.<br><i>ASDF is funded by the Defense Advanced Research Projects Agency under award W911NF018-1-0124.</i></p>
+        <p><b>Automated Scientific Discovery Framework </b>(ASDF)<br>The DARPA ASDF project develops algorithms and software for reasoning about complex mechanisms operating in the natural world, explaining large-scale data, assisting humans in generating actionable, model-based hypotheses and testing these hypotheses empirically.<br><i>ASDF is funded by the Defense Advanced Research Projects Agency under award W911NF018-1-0124.</i></p>
       </small>
     </div>
   </footer>
