Links open in new tab

--- a/indra_depmap_service/query.html
+++ b/indra_depmap_service/query.html
@@ -14,6 +14,12 @@
   <!-- BS 4.1.3 css -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
+  <style type="text/css">
+    a {
+      target-new: tab;
+    }
+  </style>
+
   <!-- custom scripts -->
   <script type="text/javascript">
     var SUBMIT_URL = 'http://localhost:5000/query/submit'
@@ -160,8 +166,8 @@
         <p class="float-right">
           <a href="#">Back to top</a>
         </p>
-        <p><a href="https://indralab.github.io">INDRALAB</a></p>
-        <p><a href="http://hits.harvard.edu">Harvard Program in Therapeutic Science (HiTS)</a></p>
+        <p><a href="https://indralab.github.io" target="_blank">INDRALAB</a></p>
+        <p><a href="http://hits.harvard.edu" target="_blank">Harvard Program in Therapeutic Science (HiTS)</a></p>
         <p><b>Automated Scientific Discovery Framework </b>(ASDF)<br>The DARPA ASDF project develops algorithms and software for reasoning about complex mechanisms operating in the natural world, explaining large-scale data, assisting humans in generating actionable, model-based hypotheses and testing these hypotheses empirically.<br><i>ASDF is funded by the Defense Advanced Research Projects Agency under award W911NF018-1-0124.</i></p>
       </small>
     </div>
